Fixed features item spacing

--- a/assets/styles/elements/octogram.features.css
+++ b/assets/styles/elements/octogram.features.css
@@ -39,6 +39,7 @@ body > .page > #features > .features .list {
 @media screen and (max-width: 450px) {
   body > .page > #features > .features .list {
     gap: var(--features-list-gap) 0;
+    padding: 0;
   }
 }
 
@@ -90,6 +91,14 @@ body > .page > #features > .features .list .item.extra {
   padding-inline: var(--features-item-extra-padding);
   background: var(--features-item-extra-bg);
   box-shadow: 0 0 30px 0 #000000;
+}
+
+
+@media screen and (max-width: 450px) {
+  body > .page > #features > .features .list .item.extra {
+    width: 90%;
+    transform: translateX(5%);
+  }
 }
 
 body > .page > #features > .features .list .item.extra .text {
